# app/Http/Requests/User/User/UpdateUserRequest.php
@@ -2,6 +2,7 @@
 
 namespace App\Http\Requests\User\User;
 
+use App\Models\User;
 use Illuminate\Foundation\Http\FormRequest;
 
 class UpdateUserRequest extends FormRequest
@@ -22,7 +23,16 @@ class UpdateUserRequest extends FormRequest
     public function rules(): array
     {
         return [
-            //
+            'name' => 'nullable|string|max:255',
+            'email' => 'nullable|string|email|max:255|unique:users,email',
+            'password' => 'nullable|string|min:6|confirmed',
+            'full_name' => 'nullable|string|max:255',
+            'address' => 'nullable|string|max:255',
+            'avatar' => 'nullable|image|mimes:jpg,jpeg,png,gif|max:2048',
+            'phone_number' => 'nullable|string|max:15',
+            'birth_date' => 'nullable|date',
+            'gender' => 'nullable|string|in:male,female,other',
+            'status_account' => 'nullable|string|max:255',
         ];
     }
 }
